[package]
name = "programming_bitcoin"
version = "0.1.0"
authors = ["Frost Red <frostredlee@gmail.com>"]
edition = "2018"

[dependencies]
num-bigint = "0.2"
num-traits = "0.2"
uint = "0.7"
num-integer = "0.1"
rand = "0.6"
sha2 = "0.8"
hmac = "0.7"
ripemd160 = "0.8"
bytes = "0.4"
nom = "5.0"
hex-literal = "0.2"
hex = "0.3"
